# travis-test-project

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build-and-test.sh  codecov.yml
include/: sample.hpp  sample2.hpp
src/: CMakeLists.txt  sample.cpp  sample2.cpp
test/: CMakeLists.txt  test.cpp  test_sample.cpp  test_sample2.cpp
